--- a/nim8us-contracts/package.json
+++ b/nim8us-contracts/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@openzeppelin/contracts": "^4.9.0",
+    "@types/chai-as-promised": "^8.0.2",
+    "chai-as-promised": "^8.0.2",
     "hardhat": "^2.26.3"
   },
   "dependencies": {
