--- a/package.json
+++ b/package.json
@@ -8,17 +8,28 @@
     "test:watch": "jest --watch",
     "build": "tsc",
     "dev": "ts-node src/index.ts",
-    "start": "node dist/index.js"
+    "dev:watch": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "start": "node dist/index.js",
+    "api:test": "curl http://localhost:3001/health"
   },
   "dependencies": {
     "@types/node": "^24.5.2",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "sharp": "^0.34.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "jest": "^30.1.3",
-    "ts-jest": "^29.4.4"
+    "ts-jest": "^29.4.4",
+    "ts-node-dev": "^2.0.0"
   }
 }
